--- a/css/test02_foam.css
+++ b/css/test02_foam.css
@@ -7,7 +7,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
+  min-height: 100vh; /* 最低でもビューポートの高さ分の高さを確保 */
   }
   
   form {
